# Pension-Data

./: .env.example  .gitignore  Issues.txt  README.md  codex-prompt-362.md  codex-prompt-413.md  langsmith-fleet-worker-attempt.json  pyproject.toml  workloop-state.md
.agents/: issue-607-ledger.yml  issue-635-ledger.yml  issue-636-ledger.yml  issue-637-ledger.yml  issue-638-ledger.yml  issue-639-ledger.yml  issue-640-ledger.yml  issue-645-ledger.yml  issue-699-ledger.yml
.github/scripts/: incident_runbook_links.js  keepalive_loop.js
.github/workflows/: agents-81-gate-followups.yml  agents-auto-pilot.yml  autofix-versions.env  backplane-conformance.yml  entity-regression.yml  extraction-golden-regression.yml  foundation-fixture-e2e.yml  mac-desktop-tauri.yml  maint-76-claude-code-review.yml  maint-dependabot-auto-lock.yml  nl-sql-golden.yml  one-pdf-pilot-golden.yml  postgres-integration.yml  pr-00-gate.yml  quality-replay.yml  quality-sla-check.yml  web-cloudflare-pages.yml
agents/: codex-118.md  codex-120.md  codex-129.md  codex-136.md  codex-137.md  codex-143.md  codex-150.md  codex-341.md  codex-607.md  codex-641.md  codex-646.md  codex-647.md  codex-649.md  codex-650.md
apps/contracts/: runtime-contract.json
apps/mac-desktop/: IMPLEMENTATION_PLAN.md  README.md  package.json
apps/web/: README.md  app.js  index.html  manifest.webmanifest  styles.css  sw.js
config/: backplane_participants.json
config/registry/: pension_systems_v1.csv
config/saved_queries/: allocation_peer_compare_v1.json  benchmark_panel_v1.json  funding_trend_v1.json  holdings_overlap_v1.json
config/sources/: source_map_v1.csv
docs/: CI_SYSTEM_GUIDE.md  DATABASE_SETUP.md  LANGCHAIN_FOUNDATIONS.md  SETUP_CHECKLIST.md  UI_LANGCHAIN_OPTIONS.md  baseline-kit-dependency.md
docs/Planning/: ISSUE_DEPENDENCY_RUN_ORDER.md  PENSION_DATA_PLAN.md
docs/adr/: ADR-0001-database-strategy.md
docs/analytics/: EXTRACTION_FALLBACK_CHAIN.md  EXTRACTION_PERSISTENCE_BOUNDARIES.md  INITIAL_VIEWS.md  PAGE_LEVEL_EVIDENCE.md
docs/contracts/: DOCUMENT_ORCHESTRATION_JOB_CONTRACT.md  entity-linkage-contract.md  quant-data-model-contract.md  query-run-record-contract.md  reviewable-findings-artifact-contract.md
docs/deploy/: CLOUDFLARE_PAGES_SETUP.md  IN_PERIMETER_REAL_DATA_REVIEW.md  MAC_DESKTOP_TAURI_SETUP.md  PC_ZERO_INSTALL_IT_REVIEW.md
docs/langchain/: EVAL_HARNESS.md  OBSERVABILITY.md
docs/ops/: INCIDENT_CLASSES.md  QUALITY_LAYER_OPERATIONS.md  REPLAY_BASELINE_WORKFLOW.md
docs/quant/: attribution-optimization-contract.md  metric-catalog.md  roadmap.md  scenario-output-contract.md
docs/reports/: baseline-coverage.md  reviewable-findings-contract-audit.md
docs/runbooks/: PIPELINE_RUNBOOK_LINKS.md  anomaly-flood.md  database-migrations.md  foundation_ingestion.md  langsmith-fleet.md  one-pdf-pilot.md  parser-fallback-exhaustion.md  parser-low-confidence-output.md  parser-output-validation-failure.md  revised-file-mismatch.md  source-map-breakage.md
docs/ux/: CAPABILITY_MATRIX.md  ELECTRON_COMPATIBILITY_TRACK.md
docs/ux-review/: REVIEW_LOG.md
scripts/: emit_backplane_reference_run.py  emit_reference_run.sh  replay_diff.py  replay_runner.py  run_db_migrations.py  run_one_pdf_pilot.py
scripts/langchain/: build_reviewable_findings_artifact.py  eval_runner.py  followup_issue_generator.py  injection_guard.py  nl_log_summary.py  nl_replay.py
scripts/source_collection/: build_pension_sources.py
scripts/web/: build_workspace_bundle.py  serve_local.py  smoke_test.py  workspace_contract.py
src/my_project.egg-info/: SOURCES.txt  top_level.txt
src/pension_data/: __init__.py  finite_guards.py
tests/: conftest.py  test_backplane_emitter.py  test_database_strategy.py  test_dependency_version_alignment.py  test_incident_runbook_links.py
tests/api/: __init__.py  test_app_serving.py  test_auth.py  test_saved_views_route.py  test_scopes.py
tests/baseline/: README.md  __init__.py  adapter.py  catalog.yaml  conftest.py  invariants.py  test_coverage_manifest.py  test_directional.py  test_golden.py  test_invariants.py
tests/ci_quality/: __init__.py  test_component_coverage_gate.py  test_fixture_pipeline_gate.py  test_manifest_gate.py  test_replay_gate.py  test_sla_gate.py
tests/coverage/: test_component_completeness.py  test_readiness_outputs.py
tests/db/: __init__.py  test_bitemporal.py  test_core_facts_schema.py  test_database_strategy.py  test_migrations_runner.py  test_staging_persistence.py  test_staging_persistence_postgres_integration.py
tests/discovery/: __init__.py  test_inventory.py
tests/docs/: test_public_hosting_data_origin_guard.py  test_quality_layer_operations_guide.py  test_runbook_presence.py
tests/entities/: __init__.py  test_alias_matching.py  test_cross_plan_lookup.py  test_lineage.py  test_matching_algorithm.py  test_registry.py  test_regression_harness.py  test_regression_runner.py
tests/export/: test_citation_exports.py  test_csv_artifacts.py
tests/extract/: test_evidence_canonicalization.py  test_persistence_helpers.py  test_persistence_pipeline.py
tests/golden/: extraction_fallback_baseline.json  extraction_fallback_corpus.json  test_extraction_regression_harness.py  test_fallback_extract_parser.py  test_nl_sql_golden.py  test_one_pdf_pilot_golden.py
tests/ingest/: __init__.py  test_13f_parse.py  test_artifacts.py  test_cafr_reconcile.py
tests/langchain/: prompt_dataset.json  test_chain_to_artifact_pipeline.py  test_eval_harness.py  test_findings_chains.py  test_followup_issue_generator.py  test_foundation.py  test_nl_sql_safety.py  test_observability.py  test_review_artifact_contract.py
tests/normalize/: test_entity_tokens.py  test_financial_units.py  test_investment_normalization.py  test_numeric_parsing.py  test_numeric_parsing_locale.py
tests/observability/: test_langsmith_fleet.py
tests/ops/: __init__.py  test_backplane_emitter.py  test_document_orchestration.py  test_foundation_ledger.py  test_one_pdf_pilot.py  test_one_pdf_pilot_real_pdf.py  test_quality_layer_contract.py
tools/: __init__.py  langchain_client.py  requirements-llm.txt
(+325 files in other folders)
