[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# Do not emit app-baseline-kit into requirements.lock. It is consumed from the
# Workflows monorepo via an unpinned `@main` git URL (see the dev optional
# dependencies), so freezing a commit SHA in the lock conflicts with that URL
# the moment Workflows main advances ("conflicting URLs for package
# app-baseline-kit" -> uv install aborts). Leaving it unpinned lets the editable
# project install resolve it from main, with no lock to keep refreshed.
[tool.uv.pip]
no-emit-package = ["app-baseline-kit"]

[project]
name = "pension-data"
version = "0.1.0"
description = "Pension data extraction, normalization, and quality pipeline toolkit"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Pension-Data Maintainers"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "defusedxml>=0.7.1",
    "fastapi>=0.116.0",
    "jsonschema>=4.17.3,<4.23.0",
    "pypdf>=5.4.0",
    "stranske-pdf-extract @ git+https://github.com/stranske/Workflows.git@a0ee3aa25c08d4eeb8e96dc6c8d7791930cd2d9a#subdirectory=packages/stranske_pdf_extract",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.2.0",
]
langchain = [
    "langchain>=0.3.27",
    "langchain-core>=0.3.75",
    "langchain-openai>=0.3.35",
    "langchain-anthropic>=0.3.20",
    "langsmith>=0.4.40",
]
source_collection = [
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "requests>=2.32.0",
]
dev = [
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "ruff==0.15.20",
    "mypy>=2.1.0",
    "black>=26.5.1",
    # app behavior baseline kit (tests/baseline/) -- shared core + golden-master glue.
    # pytest-regressions' num_regression fixture needs numpy AND pandas.
    "app-baseline-kit @ git+https://github.com/stranske/Workflows.git#subdirectory=packages/app-baseline-kit",
    "pytest-regressions==2.11.0",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/stranske/Pension-Data"
Repository = "https://github.com/stranske/Pension-Data"

[project.scripts]
one-pdf-pilot = "pension_data.ops.one_pdf_pilot_cli:main"
pension-data-serve = "pension_data.api.app:run"
reviewable-findings-artifact = "scripts.langchain.build_reviewable_findings_artifact:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
pythonpath = ["src", "."]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["pension_data", "tools"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Workflows shared packages ship no type stubs; don't fail strict mypy on import-untyped.
[[tool.mypy.overrides]]
module = ["baseline_kit", "baseline_kit.*", "stranske_pdf_extract", "stranske_pdf_extract.*"]
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py312"]
